# mcg

./: .clang-tidy  .clang-tidy-strict  .clangd  .editorconfig  .gitattributes  .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Cargo.toml  HACKING.md  LICENSE  README-zh.md  README.md  README.org  README_UPDATES.md  build.zig  build.zig.zon  run.bat  run.sh  vcpkg.json
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
benchmark/: CMakeLists.txt
benchmark/src/: mg_benchmark.cpp
cmake/: clang-tidy-targets.cmake  cxx-modules-targets.cmake  dependencies.cmake  dev-mode.cmake  install-rules.cmake  lint-targets.cmake  lint.cmake  project-config.cmake.in  project-config.hpp.in  project-metadata.cmake  project-options.cmake  run-clang-tidy.cmake  sync-compile-commands.cmake  variables.cmake
docs/: migration-plan.md
docs/pages/: about.dox
fuzz/: CMakeLists.txt
fuzz/src/: mg_fuzz.cpp
include/mg/: app.hpp  mg.hpp
include/mg/cli/: help.hpp  parser.hpp
include/mg/core/: config.hpp  error.hpp  logger.hpp  project_info.hpp  runtime.hpp  types.hpp
include/mg/fs/: commands.hpp  core.hpp
include/mg/pkgm/: core.hpp  detect.hpp  executor.hpp  registry.hpp
source/modules/: README.md  mg.ixx
src/: app.cpp  app.zig  cli.zig  commands.rs  config.zig  error.zig  file_ops.rs  fs.zig  logger.zig  main.cpp  main.rs  main.zig  main_modules.cpp  mg.cpp  package_manager.rs  pkgm.rs  pkgm.zig  python.rs  smoke.zig  types.zig  utils.rs
src-zig/: build.zig
src-zig/src/: cache.zig  logger.zig  main.zig  types.zig
src/cli/: help.cpp  help.zig  mod.zig  parser.cpp  parser.zig
src/commands/: add.rs  analyze.rs  common.rs  fs.rs  install.rs  remove.rs  upgrade.rs
src/commands/fs/: copy.rs  create.rs  moves.rs  remove.rs  rename.rs
src/core/: config.cpp  config.zig  error.cpp  error.zig  logger.cpp  logger.zig  mod.zig  runtime.cpp  runtime.zig  types.cpp  types.zig
src/fs/: commands.cpp  commands.zig  core.cpp  core.zig  mod.zig
src/package_manager/: frontend.rs  python.rs  rust.rs
src/pkgm/: auto_detect.rs  bun.rs  cargo.rs  config.rs  core.cpp  core.zig  detect.cpp  detect.rs  detect.zig  executor.cpp  executor.zig  helpers.rs  macros.rs  manager.rs  mod.zig  npm.rs  pdm.rs  pip.rs  pnpm.rs  poetry.rs  registry.cpp  registry.rs  registry.zig  types.rs  yarn.rs
src/pkgm/detect/: cache.rs  config.rs  finder.rs
src/utils/: args_parser.rs  error.rs  validator.rs
test/: CMakeLists.txt  mg_cli_real_smoke.cmake  mg_cli_smoke.cmake
test/package/: CMakeLists.txt.in  main.cpp.in  module_main.cpp.in
test/src/: mg_test.cpp
tests/: integration_test.rs
tools/: README.md  doctor.py  fix.py  install_git_hooks.py  pre_commit.py
