[package]
name = "mg"
version = "0.1.0"
edition = "2021"
authors = ["mcgeq <mcgeq@outlook.com>"]
readme = "README.md"
homepage = "https://mcgeq.com"
description = "Multi-package manager CLI."

[dependencies]
anyhow = "1.0.96"
clap = { version = "4.5.29", features = ["derive"] }
colored = "3.0.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
toml = "0.8"
once_cell = "1.19"

[dev-dependencies]
tempfile = "3.10"

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"

[profile.release]
opt-level = 3
debug = false
lto = "thin"
codegen-units = 16
panic = "unwind"
strip = false
incremental = true
